--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ def categorize(row):
         return 'ad'
 
 
-st.write("Version 0.1")
+st.write('Version 2')
 file = st.file_uploader("Upload a JSON")
 
 if file != None:
