--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Youtube Wrapped</title>
+    <title>Stlite app</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@stlite/browser@0.86.0/build/stlite.css"
@@ -35,8 +35,6 @@ def categorize(row):
     else:
         return 'ad'
 
-
-st.write('Version 2')
 file = st.file_uploader("Upload a JSON")
 
 if file != None:
